continue improving biplots in R analysis

--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -47,12 +47,12 @@ BIPLOTS AND DIFFERENCES ANALYSIS
 genetic_biplot <- function(dataframe, types) {
   pr <- prcomp(dataframe, scale=FALSE)
   bp <- ggbiplot(pr, obs.scale=1, var.scale=1, scale=1, groups=types, ellipse=TRUE, circle=TRUE)
-  return(bp)
+  return(bp + theme(legend.direction ="horizontal", legend.position = "top"))
 }
 
 genetic_biplot(Nor, celltypes)
 
-labels_prefix <- 'output_Sysdata/terminal_types/'
+labels_prefix <- 'output_data/terminal_types/'
 labels_comp <- data.frame(row.names=rownames(Nor)[1:2181])
 for(i in 1:length(file_labels)) {
   label_fname <- paste(labels_prefix, file_labels[i], '.csv', sep="")
@@ -63,11 +63,17 @@ colnames(labels_comp) <- file_labels
 n_times_4G <- apply(labels_comp == '4G', 1, function(x) sum(x))
 
 for(i in 1:length(file_labels)) {
-  Sys.sleep(.01)
+  Sys.sleep(1)
   temp_celltypes <- factor(c(as.character(labels_comp[[file_labels[i]]]), as.character(celltypes[2182:length(celltypes)])))
   genetic_biplot(Nor, temp_celltypes)
-  Sys.sleep(.01)
+  Sys.sleep(0)
 }
+
+
+unique_bp_types <- factor(c(n_times_4G, as.character(celltypes[2182:length(celltypes)])))
+unique_bp_types <- factor(unique_bp_types, levels(unique_bp_types)[c(7, 1:5, 8, 6)])
+unique_bp <- genetic_biplot(Nor, unique_bp_types)
+unique_bp + scale_color_manual(name="Number of models that predict 4G", values=c("white", "gray95", "gray82", "gray70", "gray58", "gray46", "gray34", "black"))
 ```
 
 PROPORTIONS ANALYSIS
